# coddl

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml
.claude/: settings.json
crates/coddl-backend-postgres/: Cargo.toml
crates/coddl-backend-postgres/src/: lib.rs
crates/coddl-backend-sqlite/: Cargo.toml
crates/coddl-backend-sqlite/src/: lib.rs  provision.rs
crates/coddl-codegen-cranelift/: Cargo.toml
crates/coddl-codegen-cranelift/src/: emit.rs  error.rs  lib.rs
crates/coddl-codegen-cranelift/tests/: e2e.rs
crates/coddl-codegen-llvm/: Cargo.toml
crates/coddl-codegen-llvm/src/: emit.rs  error.rs  lib.rs
crates/coddl-codegen-llvm/tests/: e2e.rs
crates/coddl-codegen-wasm/: Cargo.toml
crates/coddl-codegen-wasm/src/: lib.rs
crates/coddl-consteval/: Cargo.toml
crates/coddl-consteval/src/: lib.rs
crates/coddl-diagnostics/: Cargo.toml
crates/coddl-diagnostics/src/: lib.rs
crates/coddl-driver/: Cargo.toml
crates/coddl-driver/src/: link.rs  main.rs  runtime.rs
crates/coddl-driver/tests/: dialects.rs  e2e.rs
crates/coddl-execlocal/: Cargo.toml
crates/coddl-execlocal/src/: lib.rs
crates/coddl-fmt/: Cargo.toml
crates/coddl-fmt/src/: lib.rs  printer.rs
crates/coddl-lsp/: Cargo.toml
crates/coddl-lsp/src/: analyzer.rs  line_index.rs  lsp_convert.rs  main.rs
crates/coddl-plan/: Cargo.toml
crates/coddl-plan/src/: catalog.rs  lib.rs  modules.rs  plan.rs
crates/coddl-procir/: Cargo.toml
crates/coddl-procir/src/: codegen.rs  cut.rs  ir.rs  layout.rs  lib.rs  lower.rs
crates/coddl-provision/: Cargo.toml
crates/coddl-provision/src/: lib.rs
crates/coddl-provision/tests/: provision.rs
crates/coddl-relir/: Cargo.toml
crates/coddl-relir/src/: expr.rs  lib.rs
crates/coddl-runtime/: Cargo.toml
crates/coddl-runtime/src/: audit.rs  builtin_relvar.rs  env.rs  lib.rs  rational.rs  rc.rs  relation.rs  sqlite.rs
crates/coddl-runtime/tests/: leak_oracle.rs
crates/coddl-sqlemit/: Cargo.toml
crates/coddl-sqlemit/src/: lib.rs
crates/coddl-stdlib/: Cargo.toml
crates/coddl-stdlib/src/: lib.rs
crates/coddl-store/: Cargo.toml
crates/coddl-store/src/: lib.rs
crates/coddl-syntax/: Cargo.toml
crates/coddl-syntax/src/: ast.rs  ast_cddb.rs  ast_cdmap.rs  ast_cdstore.rs  cst.rs  file_kind.rs  format_template.rs  keywords.rs  lexer.rs  lib.rs  literal_decode.rs  parser.rs  parser_cddb.rs  parser_cdmap.rs  parser_cdstore.rs  syntax_kind.rs  token.rs
crates/coddl-types/: Cargo.toml  prelude.cd
crates/coddl-types/src/: builtins.rs  checker.rs  lib.rs  relvars.rs  ty.rs
crates/coddl-web/: Cargo.toml  build.rs
crates/coddl-web/src/: main.rs
crates/coddl-web/tests/: serve.rs
docs/: README.md  architecture.dot  cddb-grammar.md  cdmap-grammar.md  cdstore-grammar.md  codegen.md  conformance.md  driver.md  fmt.md  grammar.md  lsp.md  memory.md  milestone.md  plan.md  prelude.md  principles.md  procir.md  relir.md  risks.md  runtime.md  sqlemit.md  storage.md  typecheck.md  validation.md  webhost.md  workspace.md
editors/vscode/: .vscodeignore  Makefile  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/env-write/: env-write.cd
examples/extend-replace/: extend-replace-db.cd  extend-replace.cd  sales.cddb  seed-db.sh
examples/extend-replace-rename/: extend-replace-rename-db.cd  extend-replace-rename.cd  sales.cddb  sales.cdstore  seed-db.sh
examples/group-ungroup/: .gitignore  group-ungroup-db.cd  group-ungroup.cd  seed-db.sh  shipments.cddb  shipments.cdstore
examples/hello-world/: greetings.cddb  greetings.cdstore  hello-world-db.cd  hello-world.cd  hello-world.cdl  seed-db.sh
examples/hello-world-2/: hello-world-2.cd
examples/hello-world-db/: greetings.cdstore  hello-world-db.cd  hello-world-db.cdl  hello-world-db.cdmap  seed-db.sh
examples/insert-update-delete/: .gitignore  greetings.cddb  greetings.cdstore  insert-update-delete-db.cd  insert-update-delete.cd  seed-db.sh
examples/join-times-compose/: .gitignore  join-times-compose-db.cd  join-times-compose.cd  seed-db.sh  staffing.cddb  staffing.cdstore
examples/load-iterate/: load-iterate.cd  load-iterate.cdl
examples/module-import/: README.md  app.cd  greet.cd
examples/multi-assign/: multi-assign.cd  multi-assign.cdl
examples/possrep-date/: possrep-date.cd  possrep-date.cdl
examples/suppliers-and-parts/: .gitignore  suppliers-and-parts.cd  suppliers-and-parts.cdl  suppliersandparts.cddb  suppliersandparts.cdstore
examples/transaction/: transaction.cd  transaction.cdl
examples/transitive-closure/: .gitignore  seed-db.sh  tclose-db.cd  tclose.cd  tclose.cddb  tclose.cdstore
examples/union-intersect-minus/: .gitignore  seed-db.sh  shifts.cddb  shifts.cdstore  union-intersect-minus-db.cd  union-intersect-minus.cd
examples/use-module/: use-module.cd
examples/web-hello/: handle.cd
examples/web-users/: handle.cd  seed-db.sh  users.cddb  users.cdstore
examples/wiki/: .gitignore  ROADMAP.md  routing-design.md  seed-db.sh  wiki.cd  wiki.cddb  wiki.cdstore
examples/wrap-unwrap/: .gitignore  points.cddb  points.cdstore  seed-db.sh  wrap-unwrap-db.cd  wrap-unwrap.cd
manifesto/: INDEX.md  appA-new-relational-algebra.txt  appB-design-dilemma.txt  appC-types-and-units.txt  appD-what-is-a-database.txt  appE-view-updating.txt  appF-specialization-by-constraint.txt  appG-structural-inheritance.txt  appH-comparison-with-sql.txt  appI-tutorial-d-grammar.txt  appJ-next-25-years.txt  appK-references.txt  ch00-front-matter.txt  ch01-background-and-overview.txt  ch02-survey-of-relational-model.txt  ch03-toward-theory-of-types.txt  ch04-the-third-manifesto.txt  ch05-tutorial-d.txt  ch06-rm-prescriptions.txt  ch07-rm-proscriptions.txt  ch08-oo-prescriptions.txt  ch09-oo-proscriptions.txt  ch10-rm-very-strong-suggestions.txt  ch11-oo-very-strong-suggestions.txt  ch12-inheritance-preliminaries.txt  ch13-inheritance-model.txt  ch14-single-inheritance-scalar.txt  ch15-multiple-inheritance-scalar.txt  ch16-inheritance-tuple-relation.txt
tools/: check-grammar.sh
tools/git-hooks/: README.md  install.sh  pre-commit
(+10 files in other folders)
