[workspace]
resolver = "2"
members = [
    "crates/coddl-diagnostics",
    "crates/coddl-syntax",
    "crates/coddl-stdlib",
    "crates/coddl-types",
    "crates/coddl-plan",
    "crates/coddl-relir",
    "crates/coddl-procir",
    "crates/coddl-sqlemit",
    "crates/coddl-execlocal",
    "crates/coddl-backend-sqlite",
    "crates/coddl-backend-postgres",
    "crates/coddl-codegen-llvm",
    "crates/coddl-codegen-cranelift",
    "crates/coddl-codegen-wasm",
    "crates/coddl-runtime",
    "crates/coddl-driver",
    "crates/coddl-web",
    "crates/coddl-lsp",
    "crates/coddl-fmt",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
publish = false

[workspace.dependencies]
rowan = "0.16"
unicode-ident = "1"
rusqlite = { version = "0.31", features = ["bundled", "trace", "collation"] }
postgres = "0.19"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
thiserror = "1"
pretty = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
cranelift-object = "0.116"
target-lexicon = "0.13"
object = "0.36"
tempfile = "3"

coddl-diagnostics = { path = "crates/coddl-diagnostics" }
coddl-syntax = { path = "crates/coddl-syntax" }
coddl-stdlib = { path = "crates/coddl-stdlib" }
coddl-types = { path = "crates/coddl-types" }
coddl-plan = { path = "crates/coddl-plan" }
coddl-relir = { path = "crates/coddl-relir" }
coddl-procir = { path = "crates/coddl-procir" }
coddl-sqlemit = { path = "crates/coddl-sqlemit" }
coddl-execlocal = { path = "crates/coddl-execlocal" }
coddl-backend-sqlite = { path = "crates/coddl-backend-sqlite" }
coddl-backend-postgres = { path = "crates/coddl-backend-postgres" }
coddl-codegen-llvm = { path = "crates/coddl-codegen-llvm" }
coddl-codegen-cranelift = { path = "crates/coddl-codegen-cranelift" }
coddl-codegen-wasm = { path = "crates/coddl-codegen-wasm" }
coddl-runtime = { path = "crates/coddl-runtime" }
coddl-fmt = { path = "crates/coddl-fmt" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
