[package]
name = "coddl-backend-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "SQLite implementation of the Coddl Backend/Conn traits."

[dependencies]
coddl-sqlemit.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
