[package]
name = "coddl-execlocal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "In-process RelIR executor over materialized relations (ARCHITECTURE.md §9)."

[dependencies]
coddl-relir.workspace = true
coddl-types.workspace = true
