[package]
name = "coddl-execlocal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Compile-time RelIR → ProcIR lowering for in-process subtrees. See docs/relir.md, docs/runtime.md."

[dependencies]
coddl-relir.workspace = true
coddl-types.workspace = true
