[package]
name = "coddl-plan"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Project plan: discover `.cd` companions, cross-validate, produce the Plan downstream phases consume."

[dependencies]
coddl-diagnostics.workspace = true
coddl-stdlib.workspace = true
coddl-syntax.workspace = true
coddl-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
