[package]
name = "coddl-procir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Procedural SSA IR — backend-agnostic. See docs/procir.md."

[dependencies]
coddl-diagnostics.workspace = true
coddl-syntax.workspace = true
coddl-types.workspace = true
coddl-plan.workspace = true
coddl-relir.workspace = true
coddl-sqlemit.workspace = true
