[package]
name = "coddl-provision"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Provision a database from its .cddb catalog: fold + orchestrate over the executor."

[dependencies]
coddl-diagnostics.workspace = true
coddl-syntax.workspace = true
coddl-types.workspace = true
coddl-plan.workspace = true
coddl-relir.workspace = true
coddl-consteval.workspace = true
coddl-sqlemit.workspace = true
coddl-backend-sqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
