[package]
name = "coddl-relir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Relational IR — Algebra A core + sugar layer (ARCHITECTURE.md §4)."

[dependencies]
coddl-diagnostics.workspace = true
coddl-types.workspace = true
