[package]
name = "coddl-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Lexer, parser, and AST for Coddl source (ARCHITECTURE.md §3 surface syntax)."

[dependencies]
coddl-diagnostics.workspace = true
chumsky.workspace = true
