[package]
name = "coddl-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Lexer, parser, and AST for Coddl source. See docs/grammar.md."

[dependencies]
coddl-diagnostics.workspace = true
rowan.workspace = true
unicode-ident.workspace = true
