[package]
name = "coddl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Type checker and type representation. See docs/typecheck.md."

[dependencies]
coddl-diagnostics.workspace = true
coddl-stdlib.workspace = true
coddl-syntax.workspace = true
